// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text All color variants of texts 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        classname="sc-dkzDqf iJPdGV"
        is="p"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </div>
      <div
        classname="sc-dkzDqf fWlCFe"
        is="p"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </div>
      <div
        classname="sc-dkzDqf fqaLWW"
        is="p"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </div>
      <div
        classname="sc-dkzDqf jqVIhr"
        is="p"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </div>
      <div
        classname="sc-dkzDqf hUEShM"
        is="p"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </div>
      <div
        classname="sc-dkzDqf jtggzy"
        is="p"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </div>
      <div
        classname="sc-dkzDqf dlKWqW"
        is="p"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      classname="sc-dkzDqf iJPdGV"
      is="p"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </div>
    <div
      classname="sc-dkzDqf fWlCFe"
      is="p"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </div>
    <div
      classname="sc-dkzDqf fqaLWW"
      is="p"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </div>
    <div
      classname="sc-dkzDqf jqVIhr"
      is="p"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </div>
    <div
      classname="sc-dkzDqf hUEShM"
      is="p"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </div>
    <div
      classname="sc-dkzDqf jtggzy"
      is="p"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </div>
    <div
      classname="sc-dkzDqf dlKWqW"
      is="p"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Text All other forms of text 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c2 {
  height: 0.8em;
  width: 0.8em;
  -webkit-transform: translate(0,0.175em) rotate(-45deg);
  -ms-transform: translate(0,0.175em) rotate(-45deg);
  transform: translate(0,0.175em) rotate(-45deg);
}

.c1 {
  display: none;
  cursor: pointer;
  opacity: 0.6;
  margin-left: 0.2em;
}

.c3:hover .c0 {
  display: inline-block;
}

.c4:hover .c0 {
  display: inline-block;
}

.c5:hover .c0 {
  display: inline-block;
}

.c6:hover .c0 {
  display: inline-block;
}

.c7:hover .c0 {
  display: inline-block;
}

.c8:hover .c0 {
  display: inline-block;
}

.c9:hover .c0 {
  display: inline-block;
}

.c10:hover .c0 {
  display: inline-block;
}

.c11:hover .c0 {
  display: inline-block;
}

.c12:hover .c0 {
  display: inline-block;
}

.c13:hover .c0 {
  display: inline-block;
}

<body>
    <div>
      <div
        classname="sc-dkzDqf c3"
        is="h5"
        role="text"
      >
        Linked: The quick brown fox jumps over the lazy dog
        <a
          class="c0 c1"
          href="https://google.com"
          role="text-link"
        >
          <svg
            aria-hidden="true"
            class="c2"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"
            />
          </svg>
        </a>
      </div>
      <div
        classname="sc-dkzDqf c4"
        is="p"
        role="text"
      >
        bold: The quick brown fox jumps over the lazy dog
      </div>
      <div
        classname="sc-dkzDqf c5"
        is="p"
        role="text"
      >
        underlined: The quick brown fox jumps over the lazy dog
      </div>
      <div
        classname="sc-dkzDqf c6"
        is="p"
        role="text"
      >
        italicized: The quick brown fox jumps over the lazy dog
      </div>
      <div
        classname="sc-dkzDqf c7"
        is="p"
        role="text"
      >
        uppercase: The quick brown fox jumps over the lazy dog
      </div>
      <div
        classname="sc-dkzDqf c8"
        is="p"
        role="text"
      >
        lowercase: The quick brown fox jumps over the lazy dog
      </div>
      <div
        classname="sc-dkzDqf c9"
        is="p"
        role="text"
      >
        capitalized: The quick brown fox jumps over the lazy dog
      </div>
      <div
        classname="sc-dkzDqf c10"
        is="p"
        role="text"
      >
        disabled: The quick brown fox jumps over the lazy dog
      </div>
      <div
        classname="sc-dkzDqf c11"
        is="p"
        role="text"
      >
        stretched: The quick brown fox jumps over the lazy dog
      </div>
      <div
        classname="sc-dkzDqf c12"
        is="p"
        role="text"
      >
        centered: The quick brown fox jumps over the lazy dog
      </div>
      <div
        style="width: 200px;"
      >
        <div
          classname="sc-dkzDqf c13"
          is="p"
          role="text"
        >
          truncated: The quick brown fox jumps over the lazy dog
        </div>
      </div>
    </div>
  </body>,
  "container": .c2 {
  height: 0.8em;
  width: 0.8em;
  -webkit-transform: translate(0,0.175em) rotate(-45deg);
  -ms-transform: translate(0,0.175em) rotate(-45deg);
  transform: translate(0,0.175em) rotate(-45deg);
}

.c1 {
  display: none;
  cursor: pointer;
  opacity: 0.6;
  margin-left: 0.2em;
}

.c3:hover .c0 {
  display: inline-block;
}

.c4:hover .c0 {
  display: inline-block;
}

.c5:hover .c0 {
  display: inline-block;
}

.c6:hover .c0 {
  display: inline-block;
}

.c7:hover .c0 {
  display: inline-block;
}

.c8:hover .c0 {
  display: inline-block;
}

.c9:hover .c0 {
  display: inline-block;
}

.c10:hover .c0 {
  display: inline-block;
}

.c11:hover .c0 {
  display: inline-block;
}

.c12:hover .c0 {
  display: inline-block;
}

.c13:hover .c0 {
  display: inline-block;
}

<div>
    <div
      classname="sc-dkzDqf c3"
      is="h5"
      role="text"
    >
      Linked: The quick brown fox jumps over the lazy dog
      <a
        class="c0 c1"
        href="https://google.com"
        role="text-link"
      >
        <svg
          aria-hidden="true"
          class="c2"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"
          />
        </svg>
      </a>
    </div>
    <div
      classname="sc-dkzDqf c4"
      is="p"
      role="text"
    >
      bold: The quick brown fox jumps over the lazy dog
    </div>
    <div
      classname="sc-dkzDqf c5"
      is="p"
      role="text"
    >
      underlined: The quick brown fox jumps over the lazy dog
    </div>
    <div
      classname="sc-dkzDqf c6"
      is="p"
      role="text"
    >
      italicized: The quick brown fox jumps over the lazy dog
    </div>
    <div
      classname="sc-dkzDqf c7"
      is="p"
      role="text"
    >
      uppercase: The quick brown fox jumps over the lazy dog
    </div>
    <div
      classname="sc-dkzDqf c8"
      is="p"
      role="text"
    >
      lowercase: The quick brown fox jumps over the lazy dog
    </div>
    <div
      classname="sc-dkzDqf c9"
      is="p"
      role="text"
    >
      capitalized: The quick brown fox jumps over the lazy dog
    </div>
    <div
      classname="sc-dkzDqf c10"
      is="p"
      role="text"
    >
      disabled: The quick brown fox jumps over the lazy dog
    </div>
    <div
      classname="sc-dkzDqf c11"
      is="p"
      role="text"
    >
      stretched: The quick brown fox jumps over the lazy dog
    </div>
    <div
      classname="sc-dkzDqf c12"
      is="p"
      role="text"
    >
      centered: The quick brown fox jumps over the lazy dog
    </div>
    <div
      style="width: 200px;"
    >
      <div
        classname="sc-dkzDqf c13"
        is="p"
        role="text"
      >
        truncated: The quick brown fox jumps over the lazy dog
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Text All types of texts 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        classname="sc-dkzDqf eNMNtT"
        is="h1"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </div>
      <div
        classname="sc-dkzDqf dWYVZU"
        is="h2"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </div>
      <div
        classname="sc-dkzDqf jBQpre"
        is="h3"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </div>
      <div
        classname="sc-dkzDqf eNyqYI"
        is="h4"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </div>
      <div
        classname="sc-dkzDqf cwxSZz"
        is="h5"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </div>
      <div
        classname="sc-dkzDqf gdKAnn"
        is="span"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </div>
      <div
        classname="sc-dkzDqf bqmGt"
        is="p"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </div>
      <div
        classname="sc-dkzDqf bqmGt"
        is="p"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </div>
      <div
        classname="sc-dkzDqf jbNKBT"
        is="code"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </div>
      <div
        classname="sc-dkzDqf gdKAnn"
        is="span"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </div>
      <div
        classname="sc-dkzDqf bqmGt"
        is="p"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </div>
      <div
        classname="sc-dkzDqf eNMNtT"
        is="h1"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </div>
      <div
        classname="sc-dkzDqf dWYVZU"
        is="h2"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </div>
      <div
        classname="sc-dkzDqf jBQpre"
        is="h3"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </div>
      <div
        classname="sc-dkzDqf eNyqYI"
        is="h4"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </div>
      <div
        classname="sc-dkzDqf cwxSZz"
        is="h5"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </div>
      <div
        classname="sc-dkzDqf kkXvAq"
        is="h6"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      classname="sc-dkzDqf eNMNtT"
      is="h1"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </div>
    <div
      classname="sc-dkzDqf dWYVZU"
      is="h2"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </div>
    <div
      classname="sc-dkzDqf jBQpre"
      is="h3"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </div>
    <div
      classname="sc-dkzDqf eNyqYI"
      is="h4"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </div>
    <div
      classname="sc-dkzDqf cwxSZz"
      is="h5"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </div>
    <div
      classname="sc-dkzDqf gdKAnn"
      is="span"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </div>
    <div
      classname="sc-dkzDqf bqmGt"
      is="p"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </div>
    <div
      classname="sc-dkzDqf bqmGt"
      is="p"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </div>
    <div
      classname="sc-dkzDqf jbNKBT"
      is="code"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </div>
    <div
      classname="sc-dkzDqf gdKAnn"
      is="span"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </div>
    <div
      classname="sc-dkzDqf bqmGt"
      is="p"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </div>
    <div
      classname="sc-dkzDqf eNMNtT"
      is="h1"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </div>
    <div
      classname="sc-dkzDqf dWYVZU"
      is="h2"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </div>
    <div
      classname="sc-dkzDqf jBQpre"
      is="h3"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </div>
    <div
      classname="sc-dkzDqf eNyqYI"
      is="h4"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </div>
    <div
      classname="sc-dkzDqf cwxSZz"
      is="h5"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </div>
    <div
      classname="sc-dkzDqf kkXvAq"
      is="h6"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Text Basic render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        classname="sc-dkzDqf bqmGt"
        is="p"
        role="text"
      >
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, quae aut itaque quas reprehenderit provident, facilis laudantium facere cum velit dolorum molestiae quisquam distinctio quia illo pariatur placeat natus perferendis.
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      classname="sc-dkzDqf bqmGt"
      is="p"
      role="text"
    >
      Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, quae aut itaque quas reprehenderit provident, facilis laudantium facere cum velit dolorum molestiae quisquam distinctio quia illo pariatur placeat natus perferendis.
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Text Dark mode all color variants of texts 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        classname="sc-dkzDqf iJPdGV"
        is="p"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </div>
      <div
        classname="sc-dkzDqf fWlCFe"
        is="p"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </div>
      <div
        classname="sc-dkzDqf fqaLWW"
        is="p"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </div>
      <div
        classname="sc-dkzDqf jqVIhr"
        is="p"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </div>
      <div
        classname="sc-dkzDqf hUEShM"
        is="p"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </div>
      <div
        classname="sc-dkzDqf jtggzy"
        is="p"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </div>
      <div
        classname="sc-dkzDqf dlKWqW"
        is="p"
        role="text"
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      classname="sc-dkzDqf iJPdGV"
      is="p"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </div>
    <div
      classname="sc-dkzDqf fWlCFe"
      is="p"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </div>
    <div
      classname="sc-dkzDqf fqaLWW"
      is="p"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </div>
    <div
      classname="sc-dkzDqf jqVIhr"
      is="p"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </div>
    <div
      classname="sc-dkzDqf hUEShM"
      is="p"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </div>
    <div
      classname="sc-dkzDqf jtggzy"
      is="p"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </div>
    <div
      classname="sc-dkzDqf dlKWqW"
      is="p"
      role="text"
    >
      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, iusto est pariatur eum fugiat, dolores atque corrupti, nemo eos esse libero officiis sint quidem praesentium rem! Dicta laborum ipsum mollitia?
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Text With no children 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        classname="sc-dkzDqf bqmGt"
        is="p"
        role="text"
      />
    </div>
  </body>,
  "container": <div>
    <div
      classname="sc-dkzDqf bqmGt"
      is="p"
      role="text"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
